# HuffmanCoding

./: CMakeLists.txt  Makefile  README.md
Headers/tree_node/: node.hh
Main/: part1.cpp
Src/tree_node/: node.cpp  tree.cpp
headers/decoding/: decoding.hpp
headers/encoding/: encoding.hh  encoding.hpp
headers/graphical/: Context.hpp  context.hpp  display.hh  display.hpp  graphicDecoding.hpp  graphicEncoding.hpp  graphicTree.hpp  mainwindow.hpp
headers/tree_node/: node.hh  node.hpp  tree.hh  tree.hpp
main/: main.cpp  part1.cpp  part2.cpp
part1/: node.cpp  node.hh  part1.cpp  tree.cpp  tree.hh
src/decoding/: decoding.cpp
src/encoding/: encoding.cpp
src/graphical/: context.cpp  display.cpp  graphicDecoding.cpp  graphicEncoding.cpp  graphicTree.cpp  mainwindow.cpp
src/tree_node/: node.cpp  tree.cpp
